--- a/app/src/main/res/layout/fragment_top_crypto.xml
+++ b/app/src/main/res/layout/fragment_top_crypto.xml
@@ -29,8 +29,8 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginTop="20dp"
             android:src="@drawable/baseline_settings_24"
             app:layout_constraintEnd_toEndOf="parent"
@@ -51,17 +51,21 @@
 
             <EditText
                 android:layout_width="match_parent"
+                android:id="@+id/et_search"
+                android:editable="false"
+                android:padding="10dp"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/poppins"
-                android:gravity="center"
+                android:gravity="center_vertical"
                 android:hint="Search Crypto Currency"
+                style="@style/NoUnderlineEditText"
                 android:textSize="16sp" />
         </androidx.cardview.widget.CardView>
 
         <TextView
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="28dp"
             android:background="@drawable/circular_border_grey"
             android:fontFamily="@font/poppins_semibold"
             android:gravity="center"
@@ -81,8 +85,8 @@
             android:fontFamily="@font/poppins_semibold"
             android:gravity="center"
             android:padding="10dp"
-            android:text="Cryptocurrency"
-            android:textSize="25sp"
+            android:text="Cryptocurrency of the day"
+            android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.085"
             app:layout_constraintStart_toStartOf="parent"
