--- a/app/src/main/res/layout/item_crypto.xml
+++ b/app/src/main/res/layout/item_crypto.xml
@@ -34,6 +34,7 @@
         android:id="@+id/tv_crypto_name"
         android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
+        app:layout_constraintVertical_chainStyle="packed"
         android:textSize="18sp"
         android:fontFamily="@font/poppins_semibold"
         android:text="BTC"
@@ -48,6 +49,7 @@
         android:layout_marginTop="36dp"
         android:fontFamily="@font/poppins"
         android:text="Bitcoin"
+        app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/iv_btc"
         app:layout_constraintTop_toTopOf="@id/tv_crypto_name"
         app:layout_constraintVertical_bias="0.0" />
@@ -61,25 +63,24 @@
         android:fontFamily="@font/poppins_semibold"
         android:text="$288494"
         android:textSize="18sp"
+        app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.787"
         app:layout_constraintStart_toEndOf="@+id/tv_crypto_name"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/tv_change"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_change"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="36dp"
+        app:layout_constraintVertical_chainStyle="packed"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="68dp"
         android:fontFamily="@font/poppins_semibold"
         android:text="+5.1%"
         android:textColor="#F44336"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.479"
-        app:layout_constraintStart_toEndOf="@+id/tv_crypto_fullname"
-        app:layout_constraintTop_toTopOf="@id/tv_crypto_value"
-        app:layout_constraintVertical_bias="0.125" />
+        app:layout_constraintTop_toTopOf="@id/tv_crypto_value" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
