--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_main"
-    app:startDestination="@id/favCryptoFragment">
+    app:startDestination="@id/topCryptoFragment">
 
     <fragment
         android:id="@+id/favCryptoFragment"
@@ -20,6 +20,10 @@
             android:id="@+id/action_topCryptoFragment_to_detailCryptoFragment"
             app:destination="@id/detailCryptoFragment">
         </action>
+        <action
+            android:id="@+id/action_topCryptoFragment_to_searchCryptoFragment"
+            app:destination="@id/searchCryptoFragment">
+        </action>
     </fragment>
 
     <fragment
@@ -30,8 +34,9 @@
 
     <fragment
         android:id="@+id/detailCryptoFragment"
-        android:name="com.example.mycyptos.presentation.DetailCryptoFragment"
+        android:name="com.example.mycyptos.presentation.detailCrypto.DetailCryptoFragment"
         android:label="fragment_detail_crypto"
         tools:layout="@layout/fragment_detail_crypto">
     </fragment>
+
 </navigation>
