--- a/app/src/main/res/layout/fragment_top_crypto.xml
+++ b/app/src/main/res/layout/fragment_top_crypto.xml
@@ -49,15 +49,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView">
 
-            <EditText
+            <TextView
                 android:layout_width="match_parent"
                 android:id="@+id/et_search"
-                android:editable="false"
                 android:padding="10dp"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/poppins"
                 android:gravity="center_vertical"
-                android:hint="Search Crypto Currency"
+                android:text="Search"
                 style="@style/NoUnderlineEditText"
                 android:textSize="16sp" />
         </androidx.cardview.widget.CardView>
